# nornir_pyxl

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pydocstyle  .pylintrc  .yamllint  Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python-package.yml
docs/: changelog.md  conf.py  nornir_pyxl.plugins.tasks.rst  nornir_pyxl.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  nornir_pyxl.doctree  nornir_pyxl.plugins.doctree  nornir_pyxl.plugins.tasks.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  nornir_pyxl.html  nornir_pyxl.plugins.html  nornir_pyxl.plugins.tasks.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  nornir_pyxl.plugins.rst.txt  nornir_pyxl.plugins.tasks.rst.txt  nornir_pyxl.rst.txt
docs/_build/singlehtml/: .buildinfo  index.html  objects.inv
docs/_build/singlehtml/_static/: documentation_options.js
nornir_pyxl/: __init__.py
nornir_pyxl/plugins/tasks/: __init__.py  helpers.py  pyxl_data_map.py  pyxl_ez_data.py  wb_sdata.py
tests/: conftest.py
tests/fixtures/: financial_data.json
tests/inventory_data/: defaults.yaml  groups.yaml  hosts.yaml
tests/unit/: test_pyxl_data_map.py  test_pyxl_ez_data.py  test_wb_sdata.py
tests/unit/test_data/: .~lock.broken_example_wb.xlsx#  broken_example_wb.xlsx  financial_example_wb.xlsx  working_example_wb.xlsx
