[tool.poetry]
name = "nornir_pyxl"
version = "1.0.1"
description = "OpenPyxl plugin for Nornir"
authors = ["Hugo <hugotinoco@icloud.com>"]
readme = "README.md"
repository = "https://github.com/h4ndzdatm0ld/nornir_pyxl"
keywords = ["nornir", "open_pyxl", "pyxl"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.5"
nornir = {version = "^3.0.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylama = "^7.7.1"
mypy = "^0.790"
pytest = "^6.2.4"
coverage = "^5.5"
pylint = "^2.8.3"
pytest-cov = "^2.12.1"
ipython = "^8.10.0"
flake8 = "^3.9.2"
yamllint = "^1.26.1"
bandit = "^1.7.0"
nornir-utils = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
